...
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VAN-Ly-Raa">
                                <rect key="frame" x="20" y="393" width="374" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="Lld-SU-nCR"/>
                                </constraints>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <action selector="loginButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Tic-ms-TzM"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
...
